--- a/output-css/style.css
+++ b/output-css/style.css
@@ -330,7 +330,7 @@ header, footer, div, section {
   padding: 10px;
   text-align: center;
   transition: 0.5s;
-  max-width: 300px;
+  max-width: 250px;
 }
 
 .dev-card-text h2 {
@@ -344,12 +344,12 @@ header, footer, div, section {
   max-height: 200px;
   max-width: 200px;
   margin: 0 auto;
-  display: inline-block;
 }
 .dev-card-image img {
   width: 100%;
   height: 100%;
   object-fit: contain;
+  display: inline-block;
 }
 
 .dev-card:hover {
@@ -364,7 +364,7 @@ header, footer, div, section {
   padding: 10px;
   text-align: center;
   transition: 0.5s;
-  max-width: 300px;
+  max-width: 250px;
 }
 
 .personal-card-text h2 {
@@ -391,13 +391,9 @@ header, footer, div, section {
 }
 
 .personal-work {
-  padding-bottom: 20px;
-}
-@media (min-width: 680px) {
-  .personal-work {
-    margin: auto;
-    width: 500px;
-  }
+  flex-direction: column;
+  justify-content: space-around;
+  display: flex;
 }
 .personal-work h1 {
   font-family: Electrolize;
@@ -418,10 +414,14 @@ header, footer, div, section {
 }
 
 .cool-stuff {
-  background: #ebebeb;
+  display: flex;
   font-family: sans-serif;
+  margin: 0 auto;
   padding-bottom: 20px;
   padding-top: 50px;
+  flex-direction: column;
+  background: #ebebeb;
+  text-align: center;
 }
 .cool-stuff h1 {
   font-family: Electrolize;
@@ -429,36 +429,18 @@ header, footer, div, section {
   text-align: center;
 }
 .cool-stuff p {
-  font-family: Electrolize;
-  font-size: 20px;
-  text-align: center;
-}
-
-.stuff-inner {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin: 0 auto;
-  width: 90%;
-}
-.stuff-inner h1 {
-  font-family: Electrolize;
-  font-size: 28px;
-  text-align: center;
-}
-.stuff-inner p {
   font-family: sans-serif;
   font-size: 20px;
 }
 
-.cards-inner {
+.cool-stuff-inner {
   display: flex;
   flex-direction: column;
   margin: auto;
   justify-content: space-around;
 }
 @media (min-width: 1100px) {
-  .cards-inner {
+  .cool-stuff-inner {
     flex-direction: row;
   }
 }
@@ -471,32 +453,30 @@ header, footer, div, section {
   padding: 10px;
   text-align: center;
   transition: 0.5s;
-  width: 275px;
+  max-width: 250px;
 }
-.cool-stuff-card h2 {
+
+.cool-stuff-text h2 {
   font-family: Electrolize;
 }
-.cool-stuff-card p {
+.cool-stuff-text p {
   font-family: sans-serif;
+}
+
+.cool-stuff-image {
+  max-height: 200px;
+  max-width: 200px;
+  margin: 0 auto;
+}
+.cool-stuff-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  display: inline-block;
 }
 
 .cool-stuff-card:hover {
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-}
-
-.testing-pic {
-  height: auto;
-  width: 100px;
-}
-
-.odin-pic {
-  height: auto;
-  width: 200px;
-}
-
-.cypress-pic {
-  height: auto;
-  width: 100px;
 }
 
 .mia-hero {
