--- a/sass/components/_cool-stuff.scss
+++ b/sass/components/_cool-stuff.scss
@@ -1,30 +1,14 @@
 .cool-stuff{
-  background: $grey;
+  display: flex;
   font-family: sans-serif;
+  margin: 0 auto;
   padding-bottom: 20px;
   padding-top: 50px;
-  
-  h1{
-    font-family: Electrolize;
-    font-size: 28px;
-    text-align: center;
-    }
-
-    p{
-        font-family: Electrolize;
-        font-size: 20px;
-        text-align: center;
-    }
-}
-
-.stuff-inner{
-  display: flex;
   flex-direction: column;
-  justify-content: center;
-  margin: 0 auto;
-  width: 90%;
+  background: $grey;
+  text-align: center;
 
-  h1{
+    h1{
   font-family: Electrolize;
   font-size: 28px;
   text-align: center;
@@ -35,14 +19,100 @@
   font-size: 20px;
 
   }
+
 }
 
-.cards-inner {
+// .cool-stuff-inner{
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: center;
+//   margin: 0 auto;
+//   width: 90%;
+
+
+//   h1{
+//   font-family: Electrolize;
+//   font-size: 28px;
+//   text-align: center;
+//   }
+
+//   p{
+//     font-family: sans-serif;
+//   font-size: 20px;
+
+//   }
+// }
+
+// .cards-inner {
+//   display: flex;
+//   flex-direction: column;
+//   margin: auto;
+//   justify-content: space-around;
+
+
+//   @media(min-width:$laptop){
+//     flex-direction: row;
+//   }
+// }
+
+// .cool-stuff-card{
+//   background-color: white;
+//   border-radius: 10px;
+//   box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.25);
+//   margin: 1em;
+//   padding: 10px;
+//   text-align: center;
+//   transition: 0.5s;
+//   width: 275px;
+
+//   h2{
+//   font-family: Electrolize;
+
+//   }
+
+//   p{
+//     font-family: sans-serif;
+//   }
+// }
+
+// .cool-stuff-card:hover {
+//   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+// }
+
+// .testing-pic{
+//   height: auto;
+//   width: 100px;
+// }
+
+// .odin-pic{
+//   height: auto;
+//   width: 200px;
+// }
+
+// .cypress-pic{
+//     height: auto;
+//     width: 100px;
+// }
+
+
+// .dev-work{
+//   flex-direction: column;
+//   justify-content: space-around;
+//   // width: 725px;
+//   display: flex;
+
+//   h1{
+//   font-family: Electrolize;
+//   font-size: 28px;
+//   text-align: center;
+//   }
+// }
+
+.cool-stuff-inner{
   display: flex;
   flex-direction: column;
   margin: auto;
   justify-content: space-around;
-
 
   @media(min-width:$laptop){
     flex-direction: row;
@@ -57,33 +127,36 @@
   padding: 10px;
   text-align: center;
   transition: 0.5s;
-  width: 275px;
+  max-width: 250px;
+
+}
+
+.cool-stuff-text{
 
   h2{
-  font-family: Electrolize;
+    font-family: Electrolize;
+  
+    }
+  
+    p{
+      font-family: sans-serif;
+    }
+}
 
-  }
+.cool-stuff-image{
+  max-height: 200px;
+  max-width: 200px;
+  margin: 0 auto;
 
-  p{
-    font-family: sans-serif;
-  }
+  img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  display: inline-block;
+    }
+
 }
 
 .cool-stuff-card:hover {
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
-
-.testing-pic{
-  height: auto;
-  width: 100px;
-}
-
-.odin-pic{
-  height: auto;
-  width: 200px;
-}
-
-.cypress-pic{
-    height: auto;
-    width: 100px;
 }
