--- a/sass/components/_my-work.scss
+++ b/sass/components/_my-work.scss
@@ -40,9 +40,8 @@
   padding: 10px;
   text-align: center;
   transition: 0.5s;
-  max-width: 300px;
-  // max-height: 400px;
-  // height: 100%;
+  max-width: 250px;
+
 }
 
 .dev-card-text{
@@ -61,12 +60,12 @@
   max-height: 200px;
   max-width: 200px;
   margin: 0 auto;
-  display: inline-block;
 
   img{
     width: 100%;
     height: 100%;
     object-fit: contain;
+  display: inline-block;
     }
 
 }
@@ -74,11 +73,6 @@
 .dev-card:hover {
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
-
-
-
-
-
 
 .personal-card{
   background-color: white;
@@ -88,9 +82,7 @@
   padding: 10px;
   text-align: center;
   transition: 0.5s;
-  max-width: 300px;
-  // max-height: 400px;
-  // height: 100%;
+  max-width: 250px;
 }
 
 .personal-card-text{
@@ -126,12 +118,10 @@
 
 
 .personal-work{
-  padding-bottom: 20px;
-  
-@media(min-width:$tablet){
-  margin: auto;
-  width: 500px;
-}
+  flex-direction: column;
+  justify-content: space-around;
+  display: flex;
+
   h1{
   font-family: Electrolize;
   font-size: 28px;
