--- a/output-css/style.css
+++ b/output-css/style.css
@@ -221,7 +221,7 @@ header, footer, div, section {
   margin: auto;
   max-width: 100%;
   object-fit: cover;
-  padding-top: 20px;
+  padding-top: 40px;
   width: 300px;
 }
 @media (min-width: 680px) {
@@ -253,6 +253,10 @@ header, footer, div, section {
   height: 50px;
   padding: 10px;
   width: 150px;
+}
+
+.hero-pic:hover {
+  rotate: 0 8px 16px 0;
 }
 
 .who-i-am {
@@ -292,17 +296,17 @@ header, footer, div, section {
 .my-work {
   background: #ebebeb;
   display: flex;
+  flex-direction: column;
   font-family: sans-serif;
   margin: 0 auto;
   padding-bottom: 20px;
   padding-top: 50px;
-  flex-direction: column;
 }
 
 .dev-work {
+  display: flex;
   flex-direction: column;
   justify-content: space-around;
-  display: flex;
 }
 @media (min-width: 1100px) {
   .dev-work {
@@ -319,8 +323,8 @@ header, footer, div, section {
 .dev-work-inner {
   display: flex;
   flex-direction: column;
-  margin: auto;
   justify-content: space-around;
+  margin: auto;
 }
 @media (min-width: 1100px) {
   .dev-work-inner {
@@ -332,15 +336,11 @@ header, footer, div, section {
   background-color: white;
   border-radius: 10px;
   margin: 1em;
+  max-width: 250px;
   padding: 10px;
   text-align: center;
   transition: 0.5s;
-  max-width: 250px;
-}
-@media (min-width: 1100px) {
-  .dev-card {
-    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.25);
-  }
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.25);
 }
 
 .dev-card-text h2 {
@@ -357,7 +357,7 @@ header, footer, div, section {
 }
 .dev-card-image img {
   max-width: 100%;
-  max-height: auto;
+  max-height: 115px;
 }
 
 .dev-card:hover {
@@ -372,11 +372,7 @@ header, footer, div, section {
   text-align: center;
   transition: 0.5s;
   max-width: 250px;
-}
-@media (min-width: 1100px) {
-  .personal-card {
-    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.25);
-  }
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.25);
 }
 
 .personal-card-text h2 {
@@ -387,15 +383,13 @@ header, footer, div, section {
 }
 
 .personal-card-image {
-  max-height: 200px;
-  max-width: 200px;
+  height: auto;
+  width: 200px;
   margin: 0 auto;
-  display: inline-block;
 }
 .personal-card-image img {
-  width: 100%;
-  height: auto;
-  object-fit: contain;
+  max-width: 100%;
+  max-height: 115px;
 }
 
 .personal-card:hover {
@@ -426,13 +420,15 @@ header, footer, div, section {
 }
 
 .cool-stuff {
+  background: #ebebeb;
   display: flex;
+  flex-direction: column;
   font-family: sans-serif;
   margin: 0 auto;
   padding-bottom: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
   padding-top: 50px;
-  flex-direction: column;
-  background: #ebebeb;
   text-align: center;
 }
 .cool-stuff h1 {
@@ -450,6 +446,8 @@ header, footer, div, section {
   flex-direction: column;
   margin: auto;
   justify-content: space-around;
+  padding-bottom: 30px;
+  padding-right: 10px;
 }
 @media (min-width: 1100px) {
   .cool-stuff-inner {
@@ -465,11 +463,7 @@ header, footer, div, section {
   text-align: center;
   transition: 0.5s;
   max-width: 250px;
-}
-@media (min-width: 1100px) {
-  .cool-stuff-card {
-    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.25);
-  }
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.25);
 }
 
 .cool-stuff-text h2 {
@@ -486,7 +480,7 @@ header, footer, div, section {
 }
 .cool-stuff-image img {
   max-width: 100%;
-  max-height: auto;
+  max-height: 115px;
 }
 
 .cool-stuff-card:hover {
