--- a/sass/components/_cool-stuff.scss
+++ b/sass/components/_cool-stuff.scss
@@ -1,11 +1,13 @@
 .cool-stuff{
+  background: $grey;
   display: flex;
+  flex-direction: column;
   font-family: sans-serif;
   margin: 0 auto;
   padding-bottom: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
   padding-top: 50px;
-  flex-direction: column;
-  background: $grey;
   text-align: center;
 
     h1{
@@ -22,97 +24,13 @@
 
 }
 
-// .cool-stuff-inner{
-//   display: flex;
-//   flex-direction: column;
-//   justify-content: center;
-//   margin: 0 auto;
-//   width: 90%;
-
-
-//   h1{
-//   font-family: Electrolize;
-//   font-size: 28px;
-//   text-align: center;
-//   }
-
-//   p{
-//     font-family: sans-serif;
-//   font-size: 20px;
-
-//   }
-// }
-
-// .cards-inner {
-//   display: flex;
-//   flex-direction: column;
-//   margin: auto;
-//   justify-content: space-around;
-
-
-//   @media(min-width:$laptop){
-//     flex-direction: row;
-//   }
-// }
-
-// .cool-stuff-card{
-//   background-color: white;
-//   border-radius: 10px;
-//   box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.25);
-//   margin: 1em;
-//   padding: 10px;
-//   text-align: center;
-//   transition: 0.5s;
-//   width: 275px;
-
-//   h2{
-//   font-family: Electrolize;
-
-//   }
-
-//   p{
-//     font-family: sans-serif;
-//   }
-// }
-
-// .cool-stuff-card:hover {
-//   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-// }
-
-// .testing-pic{
-//   height: auto;
-//   width: 100px;
-// }
-
-// .odin-pic{
-//   height: auto;
-//   width: 200px;
-// }
-
-// .cypress-pic{
-//     height: auto;
-//     width: 100px;
-// }
-
-
-// .dev-work{
-//   flex-direction: column;
-//   justify-content: space-around;
-//   // width: 725px;
-//   display: flex;
-
-//   h1{
-//   font-family: Electrolize;
-//   font-size: 28px;
-//   text-align: center;
-//   }
-// }
-
 .cool-stuff-inner{
   display: flex;
   flex-direction: column;
   margin: auto;
   justify-content: space-around;
+  padding-bottom: 30px;
+  padding-right: 10px;
 
   @media(min-width:$laptop){
     flex-direction: row;
@@ -127,11 +45,7 @@
   text-align: center;
   transition: 0.5s;
   max-width: 250px;
-
-  @media(min-width:$laptop){
-    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.25);
-  }
-
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.25);
 }
 
 .cool-stuff-text{
@@ -150,10 +64,11 @@
   height: auto;
   width: 200px;
   margin: 0 auto;
+  
 
   img{
     max-width: 100%;
-    max-height: auto;
+    max-height: 115px;
     }
 
 }
