--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -23,9 +23,7 @@
   width: 500px;
 
   h1{
-    // font-family: Silkscreen;
   font-family: Electrolize;
-
 
     @media(min-width:$tablet){
       font-size: 32px;
@@ -54,13 +52,12 @@
 }
 
 .hero-pic{
-  // height: auto;
   border-radius: 100%;
   height: 300px;
   margin: auto;
   max-width: 100%;
   object-fit: cover;
-  padding-top: 20px;
+  padding-top: 40px;
   width: 300px;
 
   @media(min-width:$tablet){
@@ -90,4 +87,13 @@
   height: 50px;
   padding: 10px;
   width: 150px;
+}
+
+.hero-pic:hover{
+
+  // box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+
+  // transform: rotate(90);
+  rotate: 0 8px 16px 0;
+  
 }
