--- a/sass/components/_my-work.scss
+++ b/sass/components/_my-work.scss
@@ -1,17 +1,17 @@
 .my-work{
   background: $grey;
   display: flex;
+  flex-direction: column;
   font-family: sans-serif;
   margin: 0 auto;
   padding-bottom: 20px;
   padding-top: 50px;
-  flex-direction: column;
 }
 
 .dev-work{
+  display: flex;
   flex-direction: column;
   justify-content: space-around;
-  display: flex;
 
   @media(min-width:$laptop){
     padding-bottom: 20px;
@@ -28,8 +28,8 @@
 .dev-work-inner{
   display: flex;
   flex-direction: column;
-  margin: auto;
   justify-content: space-around;
+  margin: auto;
 
   @media(min-width:$laptop){
     flex-direction: row;
@@ -39,17 +39,12 @@
 .dev-card{
   background-color: white;
   border-radius: 10px;
-
   margin: 1em;
+  max-width: 250px;
   padding: 10px;
   text-align: center;
   transition: 0.5s;
-  max-width: 250px;
-  
-
-  @media(min-width:$laptop){
-    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.25);
-  }
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.25);
 
 }
 
@@ -69,17 +64,11 @@
   height: auto;
   width: 200px;
   margin: 0 auto;
-  // display: inline-block;
+  
 
   img{
-    // width: 100%;
-    // height: auto;
-    // object-fit: contain;
-    // display: block;
-
     max-width: 100%;
-    max-height: auto;
-    // Display: block;
+    max-height: 115px;
     }
 
 }
@@ -96,10 +85,7 @@
   text-align: center;
   transition: 0.5s;
   max-width: 250px;
-
-  @media(min-width:$laptop){
-    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.25);
-  }
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.25);
 }
 
 .personal-card-text{
@@ -115,15 +101,14 @@
 }
 
 .personal-card-image{
-  max-height: 200px;
-  max-width: 200px;
+  height: auto;
+  width: 200px;
   margin: 0 auto;
-  display: inline-block;
+  
 
   img{
-    width: 100%;
-    height: auto;
-    object-fit: contain;
+    max-width: 100%;
+    max-height: 115px;
     }
 
 }
